autofill sync job custom fields
